--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div id="overlay"></div> 
       <div class="main-container">
       <div class="play-button-container">
-      <button class="play-button" onclick="BeginPlay()"></button>
+      <button class="play-button" onclick="BeginPlay()">PLAY</button>
       </div>
     </div>
     <h1>Whos That Pokemon?</h1>
