--- a/index.html
+++ b/index.html
@@ -21,18 +21,19 @@
       <button class="play-button" onclick="BeginPlay()">PLAY</button>
       </div>
     </div>
-    <h1>Whos That Pokemon?</h1>
+    <div class="whodat-container">
+    <img src="whos_that_pokemon.webp" class="Whodat">
+    </div>
     <h2 id="Highscore">Highscore:0</h2>
     <br>
     <br>
     <h2 id="Currentscore">Score:0</h2>
-    <img src="">
+    <img class="pokemans" src="">
     <div class="buttons-div">
         <button class="buttons" id="Answer1"></button>
         <button class="buttons" id="Answer2"></button>
         <button class="buttons" id="Answer3"></button>
         <button class="buttons" id="Answer4"></button>
     </div>
-    
 </body>
 </html>
