--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <video id="myVideo" autoplay="autoplay" loop="loop">
+    <video id="myVideo" autoplay="autoplay" loop="loop" muted>
         <source src="BackGround.mp4" type="video/mp4">
       </video>
       <div id="overlay"></div> 
