--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
     <h2 id="Currentscore">Score:0</h2>
     <img class="pokemans" src="">
     <div class="buttons-div">
+        <div class="buttons-div-other">
         <button class="buttons" id="Answer1"></button>
         <button class="buttons" id="Answer2"></button>
+        </div>
+        <div class="buttons-div-other">
         <button class="buttons" id="Answer3"></button>
         <button class="buttons" id="Answer4"></button>
+        </div>
     </div>
 </body>
 </html>
