--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
     <div class="whodat-container">
     <img src="whos_that_pokemon.webp" class="Whodat">
     </div>
+    <div id="score-div1">
     <h2 id="Highscore">Highscore:0</h2>
-    <br>
-    <br>
+    </div>
+    <div id="score-div2"> 
     <h2 id="Currentscore">Score:0</h2>
+    </div>
     <img class="pokemans" src="">
     <div class="buttons-div">
         <div class="buttons-div-other">
