--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="Styles.css">
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous">
     </script>
-    <script src="Logic.js"></script>
-    
+    <script type="module" src="PokemonData.js"></script>
+    <script type="module" src="Logic.js"></script>    
+
 </head>
 <body>
     <video id="myVideo" autoplay="autoplay" loop="loop" muted>
